# CrismaApp

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  compose.yaml  dados.xlsx  data.db  generate_env.py  models.py  pyproject.toml  requirements.txt  routes.py  run.py  utils.py
backend/: app.py  dados.xlsx  generate_env.py  requirements.txt  setup.py
backend/src/: __init__.py  crismandos.py  encontros.py  frequency.py  models.py  utils.py
backend/src/api/: utils.py
backend/src/templates/: login.html
crismaapp/: __init__.py  app.py  app_routes.py  auth.py  background.py  crismandos.py  domingos.py  encontros.py  frequency.py  models.py  routes.py  utils.py
crismaapp/api/: utils.py
crismaapp/api/v1/: __init__.py  blueprint_crud.py  blueprint_data.py  (+5 more)
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  ServiceWorker.ts  index.tsx
src/: auth.py  domingos.py  models.py
src/api/: __init__.py
src/templates/: adm_base.html  base.html  frequencia_form.html
static/css/: form.css  login.css  mainpage.css
static/js/: load_data_file.js  login.js
templates/: adm_base.html  base.html  domingos.html  editar_crismando.html  editar_domingo.html  editar_encontro.html  encontros.html  frequencia.html  frequencia_form.html  login.html  mainpage.html  registrar_crismando.html  registrar_domingo.html  registrar_encontro.html
templates/adm/: adm.html  crismandos.html  domingos.html  editar_crismando.html  editar_domingo.html  editar_encontro.html  encontros.html  registrar_encontro.html
(+79 files in other folders)
